# fastapi-clean-starter

./: LICENSE  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/v1/: __init__.py  security_router.py  user_router.py
app/core/: lifespan.py  settings.py
app/exceptions/: user_exceptions.py
app/models/: user_model.py
app/repositories/: user_repo.py
app/schemas/: user_schema.py
app/services/: user_service.py
